<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f4c68f"
    tools:context=".Quiz">

    <TextView
        android:id="@+id/Pregunta"
        android:layout_width="345dp"
        android:layout_height="95dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/archivo_black"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#0A1C4E"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.303"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/QuestionCabecera" />

    <TextView
        android:id="@+id/QuestionCabecera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/archivo_black"
        android:textColor="#0D1E50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cabeceraUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/archivo_black"
        android:textAlignment="textEnd"
        android:textColor="#0D1E50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/GrupoRespuestas"
        android:layout_width="311dp"
        android:layout_height="245dp"
        android:translationY="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Pregunta">

        <RadioButton
            android:id="@+id/RespuestaA"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:fontFamily="@font/archivo_black"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#b57d80"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <RadioButton
            android:id="@+id/RespuestaB"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:fontFamily="@font/archivo_black"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#9e5584" />

        <RadioButton
            android:id="@+id/RespuestaC"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:fontFamily="@font/archivo_black"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#d15d8f" />

        <RadioButton
            android:id="@+id/RespuestaD"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:fontFamily="@font/archivo_black"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#a63990"
            android:textSize="22sp" />

    </RadioGroup>

    <Button
        android:id="@+id/ConfirmarRespuesta"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="147dp"
        android:layout_height="53dp"
        android:background="#DF98B0"
        android:fontFamily="@font/archivo_black"
        android:text="@string/Boton_Siguiente"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.837"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GrupoRespuestas"
        app:layout_constraintVertical_bias="0.691" />

    <Button
        android:id="@+id/Finalizar"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="146dp"
        android:layout_height="56dp"
        android:background="#DF98B0"
        android:fontFamily="@font/archivo_black"
        android:onClick="terminarJuego"
        android:text="@string/Boton_Finalizar"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.837"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GrupoRespuestas"
        app:layout_constraintVertical_bias="0.691" />

    <Button
        android:id="@+id/Volver"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:background="#ff508d"
        android:fontFamily="@font/archivo_black"
        android:onClick="reiniciarJuego"
        android:text="@string/Boton_Volver"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ConfirmarRespuesta"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GrupoRespuestas"
        app:layout_constraintVertical_bias="0.691" />

    <ImageView
        android:id="@+id/ImgCandy"
        android:layout_width="232dp"
        android:layout_height="152dp"
        android:contentDescription="@string/vacio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Pregunta"
        app:srcCompat="@drawable/candycrush" />

    <RadioGroup
        android:layout_width="183dp"
        android:layout_height="248dp"
        android:translationY="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.29"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Pregunta">

        <ImageView
            android:id="@+id/imagegood"
            android:layout_width="73dp"
            android:layout_height="63dp"
            android:contentDescription="@string/vacio"
            app:srcCompat="@drawable/birdgood" />

        <ImageView
            android:id="@+id/imagebomb"
            android:layout_width="74dp"
            android:layout_height="65dp"
            android:contentDescription="@string/vacio"
            app:srcCompat="@drawable/birdbomb" />

        <ImageView
            android:id="@+id/imagefilm"
            android:layout_width="71dp"
            android:layout_height="60dp"
            android:contentDescription="@string/vacio"
            app:srcCompat="@drawable/birdfilm" />

        <ImageView
            android:id="@+id/imageyellow"
            android:layout_width="75dp"
            android:layout_height="63dp"
            android:contentDescription="@string/vacio"
            app:srcCompat="@drawable/birdyellow"
            tools:ignore="ImageContrastCheck" />

    </RadioGroup>

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="287dp"
        android:layout_height="64dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/archivo_black"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#b57d80"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/ConfirmarRespuesta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ImgCandy"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="287dp"
        android:layout_height="64dp"
        android:fontFamily="@font/archivo_black"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#9e5584"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/ConfirmarRespuesta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox1"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="287dp"
        android:layout_height="64dp"
        android:fontFamily="@font/archivo_black"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#d15d8f"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/ConfirmarRespuesta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox2"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="287dp"
        android:layout_height="64dp"
        android:fontFamily="@font/archivo_black"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#a63990"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/ConfirmarRespuesta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox3"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>